# sz-crawler

./: README.md  build.py  config.py  crawler.py  crawler_gui.py  dependencies-tree.txt  path_manager.py  path_optimizer_example.py  pyproject.toml  requirements.txt  test_path_optimizer.py  打包说明.md
.github/: copilot-instructions.md
output/: 思政新闻_2025-05-27_2025-06-06.md
