[project]
name = "sz-crawler"
version = "0.1.0"
description = "山东省教育局思政新闻爬虫"
authors = [{name = "liguoma"}]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "python-dateutil==2.8.2",
    "fake-useragent==1.4.0",
    "pandas==2.1.4",
]

[dependency-groups]
dev = [
    "pyinstaller==6.3.0",
]
